Fixed spacing between span and checkboxes using width 15%

--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,6 @@ body {
   flex: initial;
 }
 
-
 /* https://www.w3schools.com/howto/howto_css_glowing_text.asp */
 
 h1 {
@@ -108,8 +107,8 @@ h1 {
 } */
 
 #session-scores-container {
-    display: inline-block;
-    min-width: 20%;
+  display: inline-block;
+  min-width: 20%;
 }
 
 .visible {
@@ -138,50 +137,50 @@ h1 {
 }
 
 .checkbox {
-    display: flex;
-    cursor: pointer;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    left: auto;
+  display: flex;
+  cursor: pointer;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  left: auto;
 }
 
 .checkbox > span {
-    color: #fff;
-    padding: 0 1rem;
-    min-width: 10%;
+  color: #fff;
+  padding: 0 1rem;
+  width: 15%;
 }
 
 .checkbox > input {
-    height: 25px;
-    width: 25px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -o-appearance: none;
-    appearance: none;
-    border: 2px solid #fff;
-    border-radius: 4px;
-    outline: none;
-    transition-duration: 0.3s;
-    background-color: #001437;
-    cursor: pointer;
-  }
+  height: 25px;
+  width: 25px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  border: 2px solid #fff;
+  border-radius: 4px;
+  outline: none;
+  transition-duration: 0.3s;
+  background-color: #001437;
+  cursor: pointer;
+}
 
 .checkbox > input:checked {
-    border: 2px solid #fff;
-    background-color: #fff;
+  border: 2px solid #fff;
+  background-color: #fff;
 }
 
 .checkbox > input:checked + span::before {
-    content: '\2713';
-    display: block;
-    text-align: center;
-    color: #41B883;
-    position: absolute;
+  content: "\2713";
+  display: block;
+  text-align: center;
+  color: #41b883;
+  position: absolute;
 }
 
 .checkbox > input:active {
-    border: 2px solid #34495E;
+  border: 2px solid #34495e;
 }
 
 @media (orientation: portrait) {
@@ -199,13 +198,13 @@ h1 {
 }
 
 @media screen and (min-width: 1024px) and (min-height: 475px) {
-    .menu-screen {
-        font-size: 1.5rem;
-    }
+  .menu-screen {
+    font-size: 1.5rem;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .menu-screen {
-        font-size: 2rem;
-    }
+  .menu-screen {
+    font-size: 2rem;
+  }
 }
